--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
