--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
   flutter_rating_bar: ^4.0.1
+  email_validator: ^2.1.17
+  cloud_firestore: ^4.5.2
 
 dev_dependencies:
   flutter_test:
