--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   email_validator: ^2.1.17
   cloud_firestore: ^4.5.2
   percent_indicator: ^4.2.3
+  health: ^6.0.0
 
 dev_dependencies:
   flutter_test:
