--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   percent_indicator: ^4.2.3
   health: ^6.0.0
   permission_handler: ^10.2.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
