--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,16 +35,17 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  firebase_core: ^2.10.0
-  firebase_auth: ^4.4.2
+  cupertino_icons: ^1.0.5
+  firebase_core: ^2.11.0
+  firebase_auth: ^4.2.2
   flutter_rating_bar: ^4.0.1
   email_validator: ^2.1.17
-  cloud_firestore: ^4.5.2
+  cloud_firestore: ^4.6.0
   percent_indicator: ^4.2.3
-  health: ^6.0.0
+  health: ^4.6.0
   permission_handler: ^10.2.0
-  intl: ^0.17.0
+  intl: ^0.18.1
+  sensors_plus: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
