--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   permission_handler: ^10.2.0
   intl: ^0.18.1
   sensors_plus: ^3.0.0
+  custom_timer: ^0.2.3
+  flutter_background_service: ^2.4.6
 
 dev_dependencies:
   flutter_test:
