--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   sensors_plus: ^3.0.0
   custom_timer: ^0.2.3
   flutter_background_service: ^2.4.6
+  csv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +76,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - 'lib/ML/MLData/dummyDataForApp.csv'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
