--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   custom_timer: ^0.2.3
   flutter_background_service: ^2.4.6
   csv: ^5.0.2
+  tflite_flutter: ^0.10.0
 
 dev_dependencies:
   flutter_test:
@@ -81,6 +82,7 @@ flutter:
     - 'lib/ML/MLData/dummyDataForApp.csv'
     - 'lib/ML/MLData/userCSV.csv'
     - 'lib/ML/MLData/mealRatings.csv'
+    - 'lib/assets/model.tflite'
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
